Sección palabra this finalizada

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@
 /Fundamentos/POO/build/
 /Fundamentos/Aritmetica/nbproject/private/
 /Fundamentos/Aritmetica/build/
+/Fundamentos/Paquetes/nbproject/private/
+/Fundamentos/Paquetes/build/
+/Fundamentos/PalabraFinal/nbproject/private/
+/Fundamentos/PalabraFinal/build/
+/Fundamentos/LaboratorioCaja/nbproject/private/
+/Fundamentos/LaboratorioCaja/build/
+/Fundamentos/PasoValorReferencia/nbproject/private/
+/Fundamentos/PasoValorReferencia/build/
+/Fundamentos/PalabraThis/nbproject/private/
+/Fundamentos/PalabraThis/build/
