Sección de arreglos finalizada

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@
 /Fundamentos/PasoValorReferencia/build/
 /Fundamentos/PalabraThis/nbproject/private/
 /Fundamentos/PalabraThis/build/
+/Fundamentos/Encapsulamiento/nbproject/private/
+/Fundamentos/Encapsulamiento/build/
+/Fundamentos/ContextoEstatico/nbproject/private/
+/Fundamentos/ContextoEstatico/build/
+/Fundamentos/Herencia/nbproject/private/
+/Fundamentos/Herencia/build/
+/Fundamentos/Arreglos/nbproject/private/
+/Fundamentos/Arreglos/build/
