Laboratorio final fundamentos finalizado

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@
 /Fundamentos/Herencia/build/
 /Fundamentos/Arreglos/nbproject/private/
 /Fundamentos/Arreglos/build/
+/Fundamentos/Matrices/nbproject/private/
+/Fundamentos/Matrices/build/
+/Fundamentos/Ventas/nbproject/private/
+/Fundamentos/Ventas/build/
+/Fundamentos/MundoPC/nbproject/private/
+/Fundamentos/MundoPC/build/
