Sección excepciones finalizada

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,15 @@
 /Programacion/Sobreescritura/build/
 /Programacion/InstanceOf/nbproject/private/
 /Programacion/InstanceOf/build/
+/Programacion/ConversionObjetos/nbproject/private/
+/Programacion/ConversionObjetos/build/
+/Programacion/ClaseObject/nbproject/private/
+/Programacion/ClaseObject/build/
+/Programacion/ClasesAbstractas/nbproject/private/
+/Programacion/ClasesAbstractas/build/
+/Programacion/Interfaces/nbproject/private/
+/Programacion/Interfaces/build/
+/Programacion/JavaBeans/nbproject/private/
+/Programacion/JavaBeans/build/
+/Programacion/ManejoExcepciones1/nbproject/private/
+/Programacion/ManejoExcepciones1/build/
