--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,12 @@
 /Programacion/JavaBeans/build/
 /Programacion/ManejoExcepciones1/nbproject/private/
 /Programacion/ManejoExcepciones1/build/
+/Programacion/ApiColecciones/nbproject/private/
+/Programacion/ApiColecciones/build/
+/Programacion/ClasesGenericas/nbproject/private/
+/Programacion/ClasesGenericas/build/
+/Programacion/ApiColeccionesGenericas/nbproject/private/
+/Programacion/ApiColeccionesGenericas/build/
+/Programacion/ManejoArchivos/nbproject/private/
+/Programacion/ManejoArchivos/build/
+/Programacion/CatalogoPeliculas/nbproject/private/
