Sección Introducción JDBC finalizada

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@
 /Programacion/ManejoArchivos/nbproject/private/
 /Programacion/ManejoArchivos/build/
 /Programacion/CatalogoPeliculas/nbproject/private/
+/Programacion/CatalogoPeliculas/build/
+/JDBC/IntroduccionJDBC/target/
